# toyproblem-af-classification

./: .gitignore  README.md  assignment_ecg_classification.ipynb  centralized-codetest.ipynb  centralized.py  code15_af_classification.ipynb  codetest.ipynb  model.pth  requirements-final.txt  resnet.py  run.sh  start.sh
federated/: README.md  client-runner.ipynb  client.py  config.toml  model.py  pyproject.toml  runner.ipynb
federated/flecg-pytorch/: pyproject.toml
federated/flecg-pytorch/pytorchexample/: client_app.py  server_app.py  task.py
federated/niid_bench/: client_fedavg.py  dataset.py  dataset_preparation.py  main.py  models.py  run_fedavg.py  server_scaffold.py
federated/niid_bench/conf/: fedavg_base.yaml
federated/old-files/: server.py
federated/outputs/2026-03-04/18-14-16/: history.pkl
federated/outputs/2026-03-04/18-14-16/.hydra/: config.yaml  hydra.yaml
federated/outputs/2026-03-05/18-27-59/: history.pkl
federated/outputs/2026-03-05/18-27-59/.hydra/: config.yaml  hydra.yaml  overrides.yaml
federated/pytorchexample/: client_app.py  client_scaffold.py  resnet.py  run_scaffold.py  server_app.py  server_scaffold.py  task.py
federated/pytorchexample/new-scaffold/: client.py  data_utils.py  model.py  run_client.py  server.py  strategy.py
federated/quickstart-pytorch/: pyproject.toml
federated/quickstart-pytorch/pytorchexample/: client_app.py  task.py
niid_bench/: main.py  run_fedavg.py
niid_bench/conf/: fedavg_base.yaml
runs_federated/: pyproject.toml
runs_federated/niid_bench/: client_fedavg.py  models.py  strategy.py
runs_federated/pytorchexample/: client_app.py  server_app.py  task.py
