[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runs_federated"
description = "FLECG"
version = "1.0.1"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.0001
batch-size = 512
partitioning = "dirichlet"

[superlink]
default = "local-custom"

[superlink.local]
options.num-supernodes = 2

[superlink.local-custom]
options.num-supernodes = 2
options.backend.client-resources.num-cpus = 8
options.backend.client-resources.num-gpus = 4.0